      Rivera for providing a test case
    - rewrite shebangs by default (disable via --no-shebang-rewrite),
      examples:
       + "/usr/bin/env python*" → "/usr/bin/python*"
       + "/usr/local/bin/python foo" → "/usr/bin/python foo"
       + "/usr/bin/python2" → "/usr/bin/python"
    - new --shebang option to replace all shebangs in bin dirs
      (example: --shebang /usr/bin/python2.6)
  * pyversions, dh_python2, pycompile: allow to override system's list of
    supported Python versions via DEBPYTHON_SUPPORTED and default Python
    version via DEBPYTHON_DEFAULT env. variables
  * Debhelper's python2 sequence now inserts dh_python2 before dh_installinit
    (closes: 670418)

  [ Scott Kitterman ]
  * Bump upstream version to match current unstable/wheezy python2.7 version

 -- Scott Kitterman <scott@kitterman.com>  Mon, 18 Jun 2012 23:09:10 -0400

python-defaults (2.7.3~rc2-1) unstable; urgency=low

  [ Scott Kitterman ]
  * Bump minimum debhelper version to 8 so all tests will run
    - dh_python2 tests 1 - 5 require dh 7 and test 6 needs dh 8
  * Move idle.xpm symlink from python to idle and add Breaks/Replaces
  * Move /usr/bin/pyversions from python to python-minimal since that's where
    the actual script it's a symlink to lives, add Breaks/Replaces
  * Bump standards version to 3.9.3 without further change
  * Correct Python package names with hyphens in them being ignored
    (Closes: #657665)
  * Drop -n from /usr/bin/idle invocations in debian/idle.desktop and
    debian/idle.menu (Closes: #482156)
  * Update Python policy
    - Describe addition of /usr/bin/python2 due to upstream changes
    - Remove redundant text on Python provides and clarify when they should be
      used
    - Update description of functionality related to X-Python-Version for
      Wheezy
    - Update X/XS-Python-Versions to also include X-Python-Version examples
    - Add appropriage Breaks/Replaces