@@ -11,6 +11,8 @@ python-defaults (2.7.3-1) unstable; urgency=low
        + "/usr/bin/python2" → "/usr/bin/python"
     - new --shebang option to replace all shebangs in bin dirs
       (example: --shebang /usr/bin/python2.6)
+    - no longer generates python2.X | python2.Y depenendies for public modules
+      (Closes: 625740)
   * pyversions, dh_python2, pycompile: allow to override system's list of
     supported Python versions via DEBPYTHON_SUPPORTED and default Python
     version via DEBPYTHON_DEFAULT env. variables
